# todo-bot-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
migrations/: 20221108202931_todos.sql
src/: database.rs  main.rs
