[package]
name = "todobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio", "runtime-tokio-native-tls"] }
teloxide = { version = "0.11.1", features = ["macros"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
