[package]
name = "todobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
sqlx = { version = "0.6.2", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
teloxide = { version = "0.11.3", features = ["macros"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.23"
itertools = "0.10.5"
once_cell = "1.16.0"
regex = "1.7.0"
